--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --red: #a03335;
+    --red: #e53838;
     --light-blue: #51b4b4;
     --dark-blue: #4993cf;
     --yellow: #e9a031;
@@ -8,5 +8,96 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
+    color: #353747;
+    background-color: hsl(0, 0%, 98%);
+}
+#top-article {
+    text-align: center;
+    margin-top: 100px;
+    font-size: 20px;
+    letter-spacing: 3px;
+    padding: 0 50px;
+}
+#bold-h1 {
+    margin: 0 0 10px 0;
+    color: hsl(229, 6%, 66%);
+}
+#span-h1 {
+    color: #353747;
+}
+#top-article > h5 {
+    margin: 0 0 90px 0;
+    font-weight: 400;
+    font-size: 28px;
+    color: hsl(229, 6%, 66%);
 }
 
+
+.card > h3 {
+    font-size: 26px;
+    margin: 0 0 25px 0;
+}
+.card > h6 {
+    color: hsl(229, 6%, 66%);
+    font-weight: 400;
+    font-size: 24px;
+    margin-bottom: 50px;
+}
+#cards-section {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 5em;
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+.card {
+    border-radius: 10px;
+    box-shadow: 2px 2px 20px  rgb(0, 0, 0, 0.1);
+    padding: 50px 50px 70px 50px;
+    width: 500px;
+}
+.col-2 {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5em;
+}
+.supervisor-card {
+    border-top: solid var(--light-blue) 5px;
+}
+.team-builder-card {
+    border-top: solid var(--red) 5px;
+}
+.karma-card {
+    border-top: solid var(--yellow) 5px;
+}
+.calculator-card {
+    border-top: solid var(--dark-blue) 5px;
+}
+.icon {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 60px;
+}
+@media (max-width: 1770px) {
+    body {
+        /* background-color: red; */
+    }
+    #cards-section {
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        gap: 5em;
+        margin-top: 50px;
+        margin-bottom: 100px;
+    }
+    .col-2 {
+        display: flex;
+        flex-direction: column;
+        gap: 5em;
+    }
+}
