--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     text-align: center;
     margin-top: 100px;
     font-size: 20px;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
     padding: 0 50px;
 }
 #bold-h1 {
@@ -52,12 +52,12 @@ body {
     gap: 5em;
     margin-top: 50px;
     margin-bottom: 100px;
+    padding: 0 25px;
 }
 .card {
     border-radius: 10px;
     box-shadow: 2px 2px 20px  rgb(0, 0, 0, 0.1);
     padding: 50px 50px 70px 50px;
-    width: 500px;
 }
 .col-2 {
     display: flex;
@@ -82,12 +82,12 @@ body {
     font-size: 60px;
 }
 @media (max-width: 1770px) {
-    body {
-        /* background-color: red; */
+    #top-article {
+        font-size: 1rem;
+        padding: 0;
     }
     #cards-section {
         display: flex;
-        flex-wrap: nowrap;
         justify-content: center;
         flex-direction: column;
         align-items: center;
@@ -99,5 +99,15 @@ body {
         display: flex;
         flex-direction: column;
         gap: 5em;
+    }
+    #top-article > h5 {
+        font-size: 1.5rem;
+        padding: 5px;
+    }
+    #span-h1 {
+        padding: 0 5px;
+    }
+    #bold-h1 {
+        padding: 0 15px;
     }
 }
